k8s/web-terminals/debian/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/websocket: "true"
    nginx.org/websocket-services: "gateway-cluster-ip-service"
spec:
  rules:
  - http:
      paths:
      - pathType: Exact
        path: "/debian/1234/abcd"
        backend:
          service:
            name: my-service
            port:
              number: 80
      - pathType: Exact
        path: "/"
        backend:
          service:
            name: my-service
            port:
              number: 80
